# race-dns-proxy

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.aarch64  Dockerfile.x86_64  LICENSE  README.md  config.toml  race-dns-proxy.toml
src/: client.rs  config.rs  handler.rs  logger.rs  main.rs
