[package]
name = "race-dns-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hickory-proto = { version = "0.24", features = [
    "tokio-runtime",
    "dns-over-https",
] }
hickory-client = { version = "0.24", default-features = false, features = [
    "dns-over-https-rustls",
    "backtrace",
] }
hickory-server = { version = "0.24", features = ["dns-over-https-rustls"] }
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
clap = { version = "4.5.23", features = ["derive"] }
async-trait = "0.1"
rustls = "0.21"
webpki-roots = "0.26"
time = { version = "0.3", features = ["serde-well-known", "std", "macros"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
