[package]
name = "race-dns-proxy"
version = "0.2.0"
edition = "2021"

[dependencies]
hickory-proto = { version = "0.25", features = [
    "tokio",
    "https-ring",
    "backtrace",
    "webpki-roots",
] }
hickory-client = { version = "0.25", default-features = false, features = [
    "https-ring",
    "backtrace",
] }
hickory-server = { version = "0.25", features = ["https-ring"] }
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
rustls = "0.23"
webpki-roots = "0.26"
time = { version = "0.3", features = [
    "serde-well-known",
    "std",
    "macros",
    "local-offset",
] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
mimalloc = { version = "0.1", optional = true }
futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
] }

[features]
default = ["mimalloc"]

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
